<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PasswordActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_changePassword"
        android:textAlignment="center"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/currentPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_currentPassword"
        />

    <EditText
        android:id="@+id/newPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_newPassword"
        />

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_save"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        />


</LinearLayout>