<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_account_menu"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/welcome"
            android:fontFamily="sans-serif"
            android:textSize="25sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/textView_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif"
            android:textSize="17sp"
            />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        >

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="Category Name"
            android:id="@+id/addCategoryEditText"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Add Category"
            android:backgroundTint="@color/black"
            android:id="@+id/addCategoryButton"/>

    </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="Item Name"
                android:id="@+id/itemNameEditText"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="Item Price"
                android:id="@+id/itemPriceEditText"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="Item Category"
                android:id="@+id/itemCategoryEditText"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="Image Name"
                android:id="@+id/imageNameEditText"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Add Item"
                android:backgroundTint="@color/black"
                android:id="@+id/addItemButton" />
        </LinearLayout>







    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        >

        <Button
            android:id="@+id/button_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:text="@string/button_home"
            android:textStyle="bold"
            android:textSize="12sp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="2.5dp"
            />
        <Button
            android:id="@+id/button_menu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:text="@string/button_menu"
            android:textStyle="bold"
            android:textSize="12sp"
            android:layout_marginLeft="2.5dp"
            android:layout_marginRight="2.5dp"
            />
        <Button
            android:id="@+id/button_account"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:text="@string/button_account"
            android:textStyle="bold"
            android:textSize="11sp"
            android:layout_marginLeft="2.5dp"
            android:layout_marginRight="2.5dp"
            />
        <Button
            android:id="@+id/button_bag"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/dark_grey"
            android:text="@string/button_bag"
            android:textStyle="bold"
            android:textSize="12sp"
            android:layout_marginLeft="2.5dp"
            android:layout_marginRight="5dp"
            />
    </LinearLayout>

</LinearLayout>